refatorando código para legibilidade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <header>
   <a routerLink="extrato">Extrato</a>
-  <a routerLink="nova-transferencia" routerLinkActive="ativo"
-    >Nova Transferência</a
-  >
+  <a routerLink="nova-transferencia" routerLinkActive="ativo">Nova Transferência</a>
 </header>
 <main>
   <router-outlet></router-outlet>
